<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
 xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.mihir.a1101037323.contactInformationActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="0dp"
            android:layout_marginTop="30dp"
            android:hint="@string/Enter_name"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/Address"
            android:inputType="text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/CCno"
            android:hint="@string/CC_no"
            android:layout_marginTop="30dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/Ph_no"
            android:id="@+id/phno"
            android:layout_marginTop="30dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/favfood"
            android:hint="@string/Fav_food"
            android:layout_marginTop="30dp" />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Register"
    android:id="@+id/regbtn"
    android:layout_marginTop="20dp"
    android:textColor="@color/colorPrimary"/>



    </LinearLayout>
</RelativeLayout>
    </ScrollView>